WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281091
[IFC] ruby's rt is not eligible for TextOnlySimpleLineBuilder
https://bugs.webkit.org/show_bug.cgi?id=281091
Summary
[IFC] ruby's rt is not eligible for TextOnlySimpleLineBuilder
alan
Reported
2024-10-08 14:46:27 PDT
ssia
Attachments
[fast-cq]Patch
(3.47 KB, patch)
2024-10-08 14:50 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-10-08 14:47:39 PDT
<
rdar://137177612
>
alan
Comment 2
2024-10-08 14:50:15 PDT
Created
attachment 472869
[details]
[fast-cq]Patch
EWS
Comment 3
2024-10-09 05:38:25 PDT
Committed
284887@main
(2cb4e8acbc79): <
https://commits.webkit.org/284887@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472869
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug