[IFC] ruby's rt is not eligible for TextOnlySimpleLineBuilder https://bugs.webkit.org/show_bug.cgi?id=281091 <rdar://137177612>

Reviewed by Antti Koivisto.

Let's (re)set m_isTextAndForcedLineBreakOnlyContent in InlineItemsBuilder::handleInlineBoxEnd in a less error-prone way.

* LayoutTests/fast/ruby/crash-when-rt-has-block-first-letter-expected.txt: Added.
* LayoutTests/fast/ruby/crash-when-rt-has-block-first-letter.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineItemsBuilder.cpp:
(WebCore::Layout::InlineItemsBuilder::handleInlineLevelBox): if (layoutBox.isRubyAnnotationBox()) branch missed to set the m_isTextAndForcedLineBreakOnlyContent flag.

Canonical link: https://commits.webkit.org/284887@main